# KubePath

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  controls.js  graph.js
kubepath/: __init__.py  config.py  main.py
kubepath/analysis/: __init__.py  pathfinder.py  rules.py  scoring.py
kubepath/api/: __init__.py  routes.py  schemas.py
kubepath/database/: __init__.py  neo4j_client.py
kubepath/ingestion/: __init__.py  aws.py  base.py  kubernetes.py
kubepath/models/: __init__.py  enums.py  graph.py
sample_data/: aws_iam.json  k8s_cluster.json
tests/: conftest.py  test_analysis.py  test_api.py  test_ingestion.py  test_models.py
